[feat] added unit test and docker image
