# storage/api-docs/api-docs.json
@@ -1001,20 +1001,20 @@
             },
             "RegisterRequest": {
                 "required": [
-                    "firstName",
-                    "lastName",
+                    "first_name",
+                    "last_name",
                     "email",
                     "password",
                     "phone"
                 ],
                 "properties": {
-                    "firstName": {
+                    "first_name": {
                         "description": "The user's first name",
                         "type": "string",
                         "maxLength": 255,
                         "example": "John"
                     },
-                    "lastName": {
+                    "last_name": {
                         "description": "The user's last name",
                         "type": "string",
                         "maxLength": 255,
@@ -1087,12 +1087,6 @@
                         "maxLength": 15,
                         "example": "+1234567890",
                         "nullable": true
-                    },
-                    "is_active": {
-                        "description": "Indicates if the user is active",
-                        "type": "boolean",
-                        "example": true,
-                        "nullable": true
                     }
                 },
                 "type": "object"
@@ -1133,12 +1127,6 @@
                         "type": "string",
                         "maxLength": 15,
                         "example": "+1234567890",
-                        "nullable": true
-                    },
-                    "is_active": {
-                        "description": "Indicates if the user is active",
-                        "type": "boolean",
-                        "example": true,
                         "nullable": true
                     }
                 },
@@ -1249,12 +1237,12 @@
                         "type": "integer",
                         "example": 1
                     },
-                    "firstName": {
+                    "first_name": {
                         "description": "The first name of the user",
                         "type": "string",
                         "example": "John"
                     },
-                    "lastName": {
+                    "last_name": {
                         "description": "The last name of the user",
                         "type": "string",
                         "example": "Doe"
